--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <a href="https://1110832079.github.io/report6666/"style="color: 
 #FFFFFF">回首頁</a>
 </center>
-<strong style="color: #FFAA33"><h1>普通</h1></strong>
+<strong style="color: #FFAA33"><h1>中等</h1></strong>
 <a href="https://jerry93823.github.io/78/"style="color: #FFFF00"><h2>AFU天際線牆騎 </h2></a><p>
 <a href="https://jerry93823.github.io/79/"style="color: #FFFF00"><h2>笑翠鳥的每月競賽</h2></a><p>
 <a href="https://jerry93823.github.io/80/"style="color: #FFFF00"><h2>潘托·波羅</h2></a><p>
